Concept_1/www/thinkCausal.css
/* most of this CSS overrides the default bootstrap*/

body {
  padding: 5px 20px 20px 5px;
  font-family: "Roboto", Helvetica, Arial, sans-serif;
  color: #636363;
  font-weight: 300;
}

/* headers */
h1, h2, h3, h4, h5, h6 {
  color: #525252;
  font-weight: 500;
}

/* links */
a {
  color: #5c5980;
  text-decoration: none;
}

/* horizontal line */
hr {
  border-top: 1px solid #fff
}

.text-primary {
  color: #5c5980;
}

.bg-primary {
  color: #fff;
  background-color: #5c5980;
}

/* text color of the expansion sections */
summary{
    color: #a3a3a3;
    font-size: 0.9em;
}

/*background squares for nav and main input sections*/
.well {
  border: 0px solid #e3e3e3;
  border-radius: 0px;
  -webkit-box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.00);
  box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.00);
}

.menulayer {
    z-index: 10;
    position: absolute;
}

/* prevents flickering on plot refresh */
.recalculating {
  opacity: 1.0;
}

/* nav tabs at the top of the page */
#nav > li.active > a {
  color: #fff;
  background-color: #5c5980;
}

/* nav dropdowns */
.dropdown-menu > li > a {
  color: #525252;
  font-weight: 300;
}

.dropdown-menu > li.active > a,
.dropdown-menu > li.active > a:hover,
.dropdown-menu > li.active > a:focus {
  color: #fff;
  background-color: #5c5980;
}


/* navigation pills on the left side */
.nav-pills > li > a {
    border-radius: 0 0 0 0;
}

.nav-pills > li.active > a,
.nav-pills > li.active > a:hover,
.nav-pills > li.active > a:focus {
  color: #fff;
  background-color: #5c5980;
}

/* navigation tabs on the top */
.nav-tabs > li > a {
  margin-right: 2px;
  line-height: 1.42857143;
  border: 1px solid transparent;
  border-radius: 0 0 0 0;
}

/* dropdowns */
.selectize-input {
  border: 1px solid #cccccc;
  padding: 6px 12px;
  display: inline-block;
  width: 100%;
  overflow: hidden;
  position: relative;
  z-index: 1;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  -webkit-box-shadow: none;
  box-shadow: none;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 0;
}

.selectize-input.dropdown-active {
  -webkit-border-radius: 0 0 0 0;
  -moz-border-radius: 0 0 0 0;
  border-radius: 0 0 0 0;
}

.selectize-input.focus {
  border-color: #5c5980;
  /*color: #f5f5f5 !important;*/
  outline: 0;
  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(92, 89, 128, 0.6);
  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(92, 89, 128, 0.6);
}

/* the little 'pills' when multiple items are selected
within the selectize dropdowns */
.item {
  -webkit-border-radius: 0 0 0 0 !important;
  -moz-border-radius: 0 0 0 0 !important;
  border-radius: 0 0 0 0 !important;
}

.item:hover, item:active, .item:focus, .item:selected {
  background-color: #eeefef !important;
}

/* buttons .btn:hover, .btn:active, .btn:visited */
.btn {
    background-color: #302f42 !important;
    border-radius: 0;
    box-shadow: none;
    border: none;
    color: #f5f5f5 !important;
    font-weight: 300;
    font-family: "Roboto", Helvetica, Arial, sans-serif;
    max-width: 100%;
    word-wrap: break-word;
    white-space: normal;
    display: inline-block;
    padding: 10px;
    width: 100%;
}

.btn:hover {
  background-color: #424159 !important;
}

.btn:active {
  background-color: #54536e !important;
}

#upload_file_div .btn {
  font-size: normal;
  word-wrap: normal;
  padding: 7px;
}

#upload_file_div .progress-bar {
  background-color: #5d5c7a;
}

#upload_file_div .form-control {
  -webkit-border-radius: 0 0 0 0;
  -moz-border-radius: 0 0 0 0;
  border-radius: 0 0 0 0;
}

#upload_file_div .form-control:focus {
  border-color: #5c5980;
  /*color: #f5f5f5 !important;*/
  outline: 0;
  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(92, 89, 128, 0.6);
  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(92, 89, 128, 0.6);
}

.floating_message {
  background-color: #5c5980;
  opacity: 0.9;
  filter: alpha(opacity=90);
  border: 0;
  border-radius: 5px;
  padding: 10px 10px 10px 10px;
  color: white;
}

/* tooltips and popovers */
/* tooltips no longer used b/c of rendering issue */
.tooltip.in {
  opacity: 0.9;
  filter: alpha(opacity=90);
  border: 0;
  color: white;
  font-family: "Roboto", Helvetica, Arial, sans-serif !important;
}

.tooltip.bottom .tooltip-inner {
  background-color: #5c5980;
}

.tooltip.bottom .tooltip-arrow {
  border-bottom-color: #5c5980;
}

.tooltip.top .tooltip-inner {
  background-color: #5c5980;
}

.tooltip.top .tooltip-arrow {
  border-top-color: #5c5980;
}

.popover, .popover-title  {
  background-color: #5c5980;
  color: white;
  border: 0;
  font-family: "Roboto", Helvetica, Arial, sans-serif !important;
}

.popover-title {
  font-weight: 700;
  font-family: "Roboto", Helvetica, Arial, sans-serif !important;
}

.popover.in, .popover-title.in, .tooltip.in {
  opacity: 0.90;
  filter: alpha(opacity=90);
  border: 0;
  font-family: "Roboto", Helvetica, Arial, sans-serif;
}

.popover.bottom .arrow:after {
  border-bottom-color: #5c5980;
}

.popover.top .arrow:after {
  border-top-color: #5c5980;
}

.popover.left .arrow:after {
  border-left-color: #5c5980;
}

.popover.right .arrow:after {
  border-right-color: #5c5980;
}

/* the below code is for the datatables
Note that much of this CSS overrides the default datatable CSS sheet */
/* row striping for data table */
table.dataTable.stripe tbody tr.odd,
table.dataTable.display tbody tr.odd {
 background-color:#F5F5F5 !important;
 border-color: white !important;
}

/* table row border */
table.dataTable.row-border tbody th,
table.dataTable.row-border tbody td,
table.dataTable.display tbody th,
table.dataTable.display tbody td {
 border-top: 0 !important
}

/* table row hover fill */
table.dataTable.hover tbody tr:hover,
table.dataTable.display tbody tr:hover {
 background-color: #e8e8e8 !important;
}

/* this is the nav buttons at the bottom of datatables
border 0 fixes the buttons moving around when you hover / click */
.dataTables_wrapper .dataTables_paginate .paginate_button {
 border: 0;
}

/* current table nav button */
.dataTables_wrapper .dataTables_paginate .paginate_button.current,
.dataTables_wrapper .dataTables_paginate .paginate_button.current:hover {
   /*border-radius: 1px;*/
   color: white !important;
   border: 0 !important;
   background-color:#5c5980 !important;
   background:-webkit-gradient(linear, left top, left bottom, color-stop(0%, #5c5980), color-stop(100%, #5c5980))!important;
   background:-webkit-linear-gradient(top, #5c5980 0%, #5c5980 100%)!important;
   background:-moz-linear-gradient(top, #5c5980 0%, #5c5980 100%)!important;
   background:-ms-linear-gradient(top, #5c5980 0%, #5c5980 100%)!important;
   background:-o-linear-gradient(top, #5c5980 0%, #5c5980 100%)!important;
}

/* table nav button hover */
.dataTables_wrapper .dataTables_paginate .paginate_button:hover {
   /*border-radius: 1px;*/
   color: black !important;
   border: 0 !important;
   background-color:#e8e8e8 !important;
   background:-webkit-gradient(linear, left top, left bottom, color-stop(0%, #e8e8e8), color-stop(100%, #e8e8e8))!important;
   background:-webkit-linear-gradient(top, #e8e8e8 0%, #e8e8e8 100%)!important;
   background:-moz-linear-gradient(top, #e8e8e8 0%, #e8e8e8 100%)!important;
   background:-ms-linear-gradient(top, #e8e8e8 0%, #e8e8e8 100%)!important;
   background:-o-linear-gradient(top, #e8e8e8 0%, #e8e8e8 100%)!important;
   background:linear-gradient(to bottom, #e8e8e8 0%, #e8e8e8 100%)!important;
}

/* help slideover */
/*https://www.w3schools.com/howto/howto_js_sidenav.asp*/
.conceptsSideBar {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 99999;
  top: 0;
  left: 0;
  background-color: #3e374a;
  overflow-x: hidden;
  transition: 0.5s;
  padding-top: 1rem;
  -webkit-box-shadow: 400px 0px 300px rgba(74, 74, 74, 0.5);
  -moz-box-shadow: 400px 0px 300px rgba(74, 74, 74, 0.5);
  box-shadow: 400px 0px 300px rgba(74, 74, 74, 0.5);
}

.conceptsSideBar a {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: #b0b0b0;
  display: block;
  transition: 0.3s;
}

.conceptsSideBar a:hover {
  color: #f1f1f1;
}

.conceptsSideBarContainer p, .conceptsSideBarContainer h1, .conceptsSideBarContainer h2, .conceptsSideBarContainer h3, .conceptsSideBarContainer h4, .conceptsSideBarContainer h5 {
  color: #b0b0b0;
}

.conceptsHeader {
  position: -webkit-sticky;
  position: sticky;
  top: 0rem;
  z-index: 99;
  background-color: #3e374a;
  padding: 0.2rem 3rem 0.2rem 3rem;
  border-bottom-width: 0.1rem;
  border-bottom-color: #b0b0b0;
  border-bottom-style: solid;
  box-shadow: 0rem -2rem 2rem 1rem #3e374a;
  margin: 0;
}

.conceptsHeader .closebtn {
  position: absolute;
  top: 0.5rem;
  right: 1rem;
  font-size: 3em;
}

.markdownContainer > p, .markdownContainer > h4, .conceptsSubHeader > h3 {
  padding: 0.2rem 3rem 0.3rem 3rem;
  margin: 0rem;
}

.markdownContainer > p {
  padding: 1rem 3rem 1rem 3rem;
}

 .markdownContainer > h4 {
  padding: 1rem 3rem 0.3rem 3rem;
 }

.conceptsSubHeader {
  position: -webkit-sticky;
  position: sticky;
  top: 7.45rem;
  z-index: 98;
  background-color: #3e374a;
  padding: 0rem 0 0rem 0;
  margin: 0 0 0rem 0;
  border-bottom-width: 0.1rem;
  border-bottom-color: #b0b0b0;
  border-bottom-style: solid;
}

.sideBarBtn {
  position: fixed;
  bottom: 1rem;
  right: 1rem;
  width: 5rem;
  height: 5rem;
  z-index: 99997;
  text-align: center;
  color: #b0b0b0;
  font-size: 1.5rem;
  font-weight: 400;
  padding: 1rem 0;
  border-radius: 50%;
  border: 2px solid white;
  background-color: #3e374a;
  opacity: 0.6;
  cursor: pointer;
}

.sideBarBtn:hover {
  opacity: 1;
  transition-duration: 400ms;
}

.conceptsGrid img {
  width: 95%;
  height: 180px;
  -webkit-box-shadow: 0px 0px 10px #c4c4c4;
  box-shadow: 0px 0px 10px #c4c4c4;
  display: block;
  margin-left: auto;
  margin-right: auto;
  object-fit: cover;
}

.backNextContainer {
  display: flex;
}

.backNextContainer > button {
  flex: 1
}

.backNextContainer > button:first-child {
  margin-right: 1rem;
}

.btn.btn-default.help {
  background-color: #938497 !important;
}

.progress {
  height: 1rem;
}

